Implemented all API calls to database
