# backend/app.js
@@ -53,16 +53,19 @@ app.use(function(err, req, res, next) {
   res.render('error');
 });
 */
+
 //get all bobas
 app.get('/v0/boba', indexRouter.getAll);
+
 //get a boba
+app.get('/v0/boba/:boba_id', indexRouter.getOne);
 
 //create a boba
-
-app.post("/v0/boba", indexRouter.post);
+app.post('/v0/boba', indexRouter.post);
 
 //update a boba
-
+app.put('/v0/boba', indexRouter.update);
 //delete a boba
+app.delete('/v0/boba/:boba_id', indexRouter.del);
 
 module.exports = app;
